Most of the work needed for registers and fields to be deduplicated

--- a/src/peakrdl_python/templates/addrmap_udp_property.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_udp_property.py.jinja
@@ -33,7 +33,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
 {%- macro udp_property(node) %}
 
-    {% set property_list = get_properties_to_include(node,udp_to_include) %}
+    {% set property_list = node.properties_to_include %}
     {% if property_list %}
     @property
     def udp(self) -> UDPStruct:
