--- a/src/peakrdl_python/templates/addrmap.py.jinja
+++ b/src/peakrdl_python/templates/addrmap.py.jinja
@@ -151,7 +151,7 @@ from {% if skip_lib_copy %}peakrdl_python.{% else %}..{% endif %}lib import Norm
 {%- endmacro %}
 
 {%- macro regfile_class(node) %}
-class {{get_fully_qualified_type_name(node)}}_cls({% if asyncoutput %}Async{% endif %}RegFile):
+class {{node.fully_qualified_type_name}}_cls({% if asyncoutput %}Async{% endif %}RegFile):
     """
     Class to represent a register file in the register model
 
@@ -245,19 +245,19 @@ class {{get_fully_qualified_type_name(node)}}_array_cls({% if asyncoutput %}Asyn
 {%- endmacro %}
 
 {%- macro addrmap_class(node) %}
-class {{get_fully_qualified_type_name(node)}}_cls({% if asyncoutput %}Async{% endif %}AddressMap):
+class {{node.fully_qualified_type_name}}_cls({% if asyncoutput %}Async{% endif %}AddressMap):
     """
     Class to represent a address map in the register model
 
-    {{get_table_block(node) | indent}}
+    {{get_table_block(node.instance) | indent}}
     """
 
-    __slots__ : list[str] = [{%- for child_node in node.children(unroll=False) -%}{%- if isinstance(child_node, systemrdlRegNode) or isinstance(child_node, systemrdlRegfileNode) or isinstance(child_node, systemrdlAddrmapNode) or isinstance(child_node, systemrdlMemNode) -%}'__{{child_node.inst_name}}'{% if not loop.last %}, {% endif %}{% endif %}{%- endfor %}]
+    __slots__ : list[str] = [{%- for child_node in node.instance.children(unroll=False) -%}{%- if isinstance(child_node, systemrdlRegNode) or isinstance(child_node, systemrdlRegfileNode) or isinstance(child_node, systemrdlAddrmapNode) or isinstance(child_node, systemrdlMemNode) -%}'__{{child_node.inst_name}}'{% if not loop.last %}, {% endif %}{% endif %}{%- endfor %}]
 
     def __init__(self, *,
-                 address:int {%- if node == top_node -%}={{top_node.absolute_address}}{%- endif -%},
-                 logger_handle:str {%- if node == top_node -%}='reg_model.{{top_node.get_path()}}'{%- endif -%},
-                 inst_name:str{%- if node == top_node -%}='{{node.inst_name}}'{%- endif -%},
+                 address:int {%- if node.instance == top_node -%}={{top_node.absolute_address}}{%- endif -%},
+                 logger_handle:str {%- if node.instance == top_node -%}='reg_model.{{top_node.get_path()}}'{%- endif -%},
+                 inst_name:str{%- if node.instance == top_node -%}='{{node.instance.inst_name}}'{%- endif -%},
                  callbacks: Optional[Union[{% if asyncoutput %}Async{% else %}Normal{% endif %}CallbackSet, {% if asyncoutput %}Async{% else %}Normal{% endif %}CallbackSetLegacy]]=None,
                  parent:Optional[{% if asyncoutput %}Async{% endif %}AddressMap]=None):
 
@@ -271,15 +271,15 @@ class {{get_fully_qualified_type_name(node)}}_cls({% if asyncoutput %}Async{% en
                          inst_name=inst_name,
                          parent=parent)
 
-        {% for child_node in node.children(unroll=False) -%}
+        {% for child_node in node.instance.children(unroll=False) -%}
             {{ regfile_or_addr_instance(child_node) | indent }}
         {% endfor %}
 
     @property
     def size(self) -> int:
-        return {{node.size}}
+        return {{node.instance.size}}
 
-        {%- for child_node in node.children(unroll=False) -%}
+        {%- for child_node in node.instance.children(unroll=False) -%}
             {%- if isinstance(child_node, systemrdlRegNode) or isinstance(child_node, systemrdlRegfileNode) or isinstance(child_node, systemrdlAddrmapNode) or isinstance(child_node, systemrdlMemNode) %}
                 {%- if not hide_node_func(child_node) %}
     @property
@@ -305,26 +305,26 @@ class {{get_fully_qualified_type_name(node)}}_cls({% if asyncoutput %}Async{% en
             {%- endif %}
         {% endfor %}
 
-    {{ systemrdl_python_child_name_map(node) }}
+    {{ systemrdl_python_child_name_map(node.instance) }}
 
-    {{ get_child_by_system_rdl_name(node) }}
+    {{ get_child_by_system_rdl_name(node.instance) }}
 
     {{ udp_property(node) }}
 
-    {{ universal_properties(node) }}
+    {{ universal_properties(node.instance) }}
 
-    {{ child_register_getter(node) }}
+    {{ child_register_getter(node.instance) }}
     {% if asyncoutput %}
-    {{ child_getter(node, "get_sections", "AsyncAddressMap, AsyncRegFile, AsyncAddressMapArray, AsyncRegFileArray", (systemrdlAddrmapNode, systemrdlRegfileNode)) }}
-    {{ child_getter(node, "get_memories",    "AsyncMemory, AsyncMemoryArray",     systemrdlMemNode) }}
+    {{ child_getter(node.instance, "get_sections", "AsyncAddressMap, AsyncRegFile, AsyncAddressMapArray, AsyncRegFileArray", (systemrdlAddrmapNode, systemrdlRegfileNode)) }}
+    {{ child_getter(node.instance, "get_memories",    "AsyncMemory, AsyncMemoryArray",     systemrdlMemNode) }}
     {% else %}
-    {{ child_getter(node, "get_sections", "AddressMap, RegFile, AddressMapArray, RegFileArray", (systemrdlAddrmapNode, systemrdlRegfileNode)) }}
-    {{ child_getter(node, "get_memories",    "Memory, MemoryArray",     systemrdlMemNode) }}
+    {{ child_getter(node.instance, "get_sections", "AddressMap, RegFile, AddressMapArray, RegFileArray", (systemrdlAddrmapNode, systemrdlRegfileNode)) }}
+    {{ child_getter(node.instance, "get_memories",    "Memory, MemoryArray",     systemrdlMemNode) }}
 
     {% endif %}
 
-    {%- if node.is_array %}
-class {{get_fully_qualified_type_name(node)}}_array_cls({% if asyncoutput %}Async{% endif %}AddressMapArray):
+    {%- if node.instance.is_array %}
+class {{node.get_fully_qualified_type_name}}_array_cls({% if asyncoutput %}Async{% endif %}AddressMapArray):
     """
     Class to represent a addrmap array in the register model
     """
@@ -396,9 +396,9 @@ class {{property_enum.type_name}}_property_enumcls({% if legacy_enum_type %}IntE
 
 {% if uses_enum %}
 # root level enum definitions
-{%- for enum_needed, owning_field in get_dependent_enum(top_node.parent, hide_node_func) %}
+{%- for enum_needed in get_dependent_enum(top_node.parent, hide_node_func) %}
 @unique
-class {{get_fully_qualified_enum_type(top_node.parent, owning_field, hide_node_func)}}_enumcls({% if legacy_enum_type %}IntEnum{% else %}SystemRDLEnum{% endif %}):
+class {{get_fully_qualified_enum_type(enum_needed)}}_enumcls({% if legacy_enum_type %}IntEnum{% else %}SystemRDLEnum{% endif %}):
 
     {% for value_of_enum_needed in enum_needed -%}
     {{ value_of_enum_needed.name.upper() }} = {% if legacy_enum_type %}{{ value_of_enum_needed.value }}{% else %}SystemRDLEnumEntry(int_value={{value_of_enum_needed.value}}, name={%- if value_of_enum_needed.rdl_name is not none -%}'{{value_of_enum_needed.rdl_name}}'{% else %}None{% endif %}, desc={%- if value_of_enum_needed.rdl_desc is not none -%}'{{value_of_enum_needed.rdl_desc}}'{% else %}None{% endif %}){% endif %}  {%- if value_of_enum_needed.rdl_desc is not none -%}# {{ value_of_enum_needed.rdl_desc }} {%- endif %}
@@ -408,22 +408,23 @@ class {{get_fully_qualified_enum_type(top_node.parent, owning_field, hide_node_f
 
 
 # regfile, register and field definitions
-{%- for node in get_dependent_component(top_node.parent, hide_node_func) -%}
+{%- for unique_node in get_dependent_component(top_node.parent) -%}
 {# the get_dependent_component already strips out hidden items so there is no need to check here
    for hidden items #}
-    {% if isinstance(node, systemrdlRegNode) %}
-    {{ register_class(node)  }}
-    {% elif isinstance(node, systemrdlRegfileNode) %}
-    {{ regfile_class(node) }}
-    {% elif isinstance(node, systemrdlAddrmapNode) %}
-    {{ addrmap_class(node) }}
-    {% elif isinstance(node, systemrdlFieldNode) %}
-    {{ field_class(node)  }}
-    {% elif isinstance(node, systemrdlMemNode) %}
-    {{ memory_class(node)  }}
+    {% if isinstance(unique_node.instance, systemrdlRegNode) %}
+    {{ register_class(unique_node)  }}
+    {% elif isinstance(unique_node.instance, systemrdlRegfileNode) %}
+    {{ regfile_class(unique_node) }}
+    {% elif isinstance(unique_node.instance, systemrdlAddrmapNode) %}
+    {{ addrmap_class(unique_node) }}
+    {% elif isinstance(unique_node.instance, systemrdlFieldNode) %}
+    {{ field_class(unique_node)  }}
+    {% elif isinstance(unique_node.instance, systemrdlMemNode) %}
+    {{ memory_class(unique_node)  }}
     {% endif %}
 {% endfor %}
 
+{{top_node.inst_name}}_cls = {{get_fully_qualified_type_name(top_node)}}_cls
 
 if __name__ == '__main__':
     # dummy functions to demonstrate the class
@@ -466,5 +467,5 @@ if __name__ == '__main__':
         print('write data:0x%X to address:0x%X'%(data, addr))
 
     # create an instance of the class
-    {{top_node.inst_name}} = {{get_fully_qualified_type_name(top_node)}}_cls(callbacks = {% if asyncoutput %}AsyncCallbackSet{% else %}NormalCallbackSet{% endif %}{% if legacy_block_access %}Legacy{% endif %}(read_callback=read_addr_space,
+    {{top_node.inst_name}} = {{top_node.inst_name}}_cls(callbacks = {% if asyncoutput %}AsyncCallbackSet{% else %}NormalCallbackSet{% endif %}{% if legacy_block_access %}Legacy{% endif %}(read_callback=read_addr_space,
                                                                                                      write_callback=write_addr_space))
