--- a/src/peakrdl_python/templates/addrmap_field.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_field.py.jinja
@@ -20,23 +20,26 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
 {% from 'addrmap_universal_property.py.jinja' import universal_properties with context %}
 
 {%- macro field_class(node) %}
-    {% if node.is_sw_readable and node.is_sw_writable %}
-class {{get_fully_qualified_type_name(node)}}_cls(Field{%- if 'encode' in node.list_properties() -%}Enum{% endif %}{% if asyncoutput %}Async{% endif %}ReadWrite):
-    {% elif node.is_sw_readable and not node.is_sw_writable %}
-class {{get_fully_qualified_type_name(node)}}_cls(Field{%- if 'encode' in node.list_properties() -%}Enum{% endif %}{% if asyncoutput %}Async{% endif %}ReadOnly):
-    {% elif not node.is_sw_readable and node.is_sw_writable %}
-class {{get_fully_qualified_type_name(node)}}_cls(Field{%- if 'encode' in node.list_properties() -%}Enum{% endif %}{% if asyncoutput %}Async{% endif %}WriteOnly):
+    {% if node.read_write %}
+class {{node.fully_qualified_type_name}}_cls(Field{%- if node.encoded_field -%}Enum{% endif %}{% if asyncoutput %}Async{% endif %}ReadWrite):
+    {% elif node.read_only %}
+class {{node.fully_qualified_type_name}}_cls(Field{%- if node.encoded_field -%}Enum{% endif %}{% if asyncoutput %}Async{% endif %}ReadOnly):
+    {% elif node.write_only %}
+class {{node.fully_qualified_type_name}}_cls(Field{%- if node.encoded_field  -%}Enum{% endif %}{% if asyncoutput %}Async{% endif %}WriteOnly):
+    {% else %}
+{{raise_template_error('Unhandled Field type')}}
     {% endif %}
     """
     Class to represent a register field in the register model
 
-    {{get_table_block(node) | indent}}
+    {{get_table_block(node.instance) | indent}}
     """
+    # node hash: 0x{{node.__hash__()}}
 
     __slots__ : list[str] = []
 
     {{ udp_property(node) }}
 
-    {{ universal_properties(node) }}
+    {{ universal_properties(node.instance) }}
 
 {%- endmacro -%}
