--- a/src/peakrdl_python/templates/addrmap_register.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_register.py.jinja
@@ -22,20 +22,21 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>.
 {% from 'addrmap_system_rdl_name_mapping.py.jinja' import systemrdl_python_child_name_map with context %}
 
 {%- macro register_class(node) %}
-    {%- if node.has_sw_readable and node.has_sw_writable %}
-class {{get_fully_qualified_type_name(node)}}_cls(Reg{% if asyncoutput %}Async{% endif %}ReadWrite):
-    {%- elif node.has_sw_readable and not node.has_sw_writable %}
-class {{get_fully_qualified_type_name(node)}}_cls(Reg{% if asyncoutput %}Async{% endif %}ReadOnly):
-    {%- elif not node.has_sw_readable and node.has_sw_writable %}
-class {{get_fully_qualified_type_name(node)}}_cls(Reg{% if asyncoutput %}Async{% endif %}WriteOnly):
+    {%- if node.read_write %}
+class {{node.fully_qualified_type_name}}_cls(Reg{% if asyncoutput %}Async{% endif %}ReadWrite):
+    {%- elif node.read_only %}
+class {{node.fully_qualified_type_name}}_cls(Reg{% if asyncoutput %}Async{% endif %}ReadOnly):
+    {%- elif node.write_only %}
+class {{node.fully_qualified_type_name}}_cls(Reg{% if asyncoutput %}Async{% endif %}WriteOnly):
     {%- endif %}
     """
     Class to represent a register in the register model
 
-    {{get_table_block(node) | indent}}
+    {{get_table_block(node.instance) | indent}}
     """
+    # node hash: 0x{{node.__hash__()}}
 
-    __slots__ : list[str] = [{%- for child_node in node.children(unroll=False) -%}'__{{child_node.inst_name}}'{% if not loop.last %}, {% endif %}{%- endfor %}]
+    __slots__ : list[str] = [{%- for child_node in node.instance.children(unroll=False) -%}'__{{child_node.inst_name}}'{% if not loop.last %}, {% endif %}{%- endfor %}]
 
     def __init__(self,
                  address: int,
@@ -44,11 +45,11 @@ class {{get_fully_qualified_type_name(node)}}_cls(Reg{% if asyncoutput %}Async{%
                  logger_handle: str,
                  inst_name: str,
                  parent: Union[{% if asyncoutput -%}Async{%- endif -%}AddressMap,{%- if asyncoutput -%}Async{%- endif -%}RegFile,
-                 {%- if node.has_sw_readable and node.has_sw_writable -%}
+                 {%- if node.read_write -%}
                     Memory{% if asyncoutput %}Async{% endif -%}ReadWrite{% if legacy_block_access %}Legacy{% endif %}
-                 {%- elif node.has_sw_readable and not node.has_sw_writable -%}
+                 {%- elif node.read_only -%}
                     Readable{% if asyncoutput %}Async{% endif -%}Memory{% if legacy_block_access %}Legacy{% endif %}
-                 {%- elif not node.has_sw_readable and node.has_sw_writable -%}
+                 {%- elif node.read_only -%}
                     Writable{% if asyncoutput %}Async{% endif -%}Memory{% if legacy_block_access %}Legacy{% endif %}
                  {%- endif -%}
                  ]):
@@ -61,7 +62,7 @@ class {{get_fully_qualified_type_name(node)}}_cls(Reg{% if asyncoutput %}Async{%
                          parent=parent)
 
         # build the field attributes
-        {% for child_node in get_reg_fields(node, hide_node_func) %}
+        {% for child_node in get_reg_fields(node.instance) %}
         self.__{{child_node.inst_name}}:{{get_fully_qualified_type_name(child_node)}}_cls = {{get_fully_qualified_type_name(child_node)}}_cls(
             parent_register=self,
             size_props=FieldSizeProps(
@@ -75,7 +76,7 @@ class {{get_fully_qualified_type_name(node)}}_cls(Reg{% if asyncoutput %}Async{%
                 is_volatile={{child_node.is_hw_writable}}),
             logger_handle=logger_handle+'.{{child_node.inst_name}}',
             inst_name='{{child_node.inst_name}}',
-            field_type={% if 'encode' in child_node.list_properties() %}{{ get_fully_qualified_enum_type(top_node.parent, child_node, hide_node_func) + '_enumcls' }}{% else %}int{% endif %})
+            field_type={% if 'encode' in child_node.list_properties() %}{{ get_fully_qualified_enum_type(child_node.get_property('encode')) + '_enumcls' }}{% else %}int{% endif %})
         {%- endfor %}
 
     @property
@@ -83,14 +84,14 @@ class {{get_fully_qualified_type_name(node)}}_cls(Reg{% if asyncoutput %}Async{%
         """
         generator that produces has all the fields within the register
         """
-        {% for child_node in get_reg_fields(node, hide_node_func) -%}
+        {% for child_node in get_reg_fields(node.instance) -%}
         yield self.{{safe_node_name(child_node)}}
         {% endfor %}
         # Empty generator in case there are no children of this type
         if False: yield
 
 
-    {% if node.has_sw_writable and not node.has_sw_readable %}
+    {% if node.write_only %}
     {# if the register has no readable components, all the fields must be writen as one #}
     {% if asyncoutput %}async {% endif %}def write_fields(self, {%- for child_node in node.fields() -%} {{safe_node_name(child_node)}} : {%- if 'encode' in child_node.list_properties() %}{{get_fully_qualified_enum_type(top_node.parent, child_node, hide_node_func)}}_enumcls{% else %}int{% endif %}{%- if not loop.last -%},{%- endif -%}{%- endfor -%}) -> None: # type: ignore[override]
         """
@@ -107,9 +108,9 @@ class {{get_fully_qualified_type_name(node)}}_cls(Reg{% if asyncoutput %}Async{%
     {% endif %}
 
     # build the properties for the fields
-    {% for child_node in get_reg_fields(node, hide_node_func) %}
+    {% for child_node in get_reg_fields(node.instance) %}
     @property
-    def {{safe_node_name(child_node)}}(self) -> {{get_fully_qualified_type_name(child_node)}}_cls:
+    def {{safe_node_name(child_node)}}(self) -> '{{get_fully_qualified_type_name(child_node)}}_cls':
         """
         Property to access {{child_node.inst_name}} field of the register
 
@@ -118,21 +119,21 @@ class {{get_fully_qualified_type_name(node)}}_cls(Reg{% if asyncoutput %}Async{%
         return self.__{{child_node.inst_name}}
     {%- endfor %}
 
-    {{ systemrdl_python_child_name_map(node) }}
+    {{ systemrdl_python_child_name_map(node.instance) }}
 
-    {{ get_child_by_system_rdl_name(node) }}
+    {{ get_child_by_system_rdl_name(node.instance) }}
 
     {{ udp_property(node) }}
 
-    {{ universal_properties(node) }}
+    {{ universal_properties(node.instance) }}
 
-    {%- if node.is_array %}
-        {%- if node.has_sw_readable and node.has_sw_writable %}
-class {{get_fully_qualified_type_name(node)}}_array_cls(Reg{% if asyncoutput %}Async{% endif %}ReadWriteArray):
-        {%- elif node.has_sw_readable and not node.has_sw_writable %}
-class {{get_fully_qualified_type_name(node)}}_array_cls(Reg{% if asyncoutput %}Async{% endif %}ReadOnlyArray):
-        {%- elif not node.has_sw_readable and node.has_sw_writable %}
-class {{get_fully_qualified_type_name(node)}}_array_cls(Reg{% if asyncoutput %}Async{% endif %}WriteOnlyArray):
+    {%- if node.instance.is_array %}
+        {%- if node.read_write %}
+class {{node.fully_qualified_type_name}}_array_cls(Reg{% if asyncoutput %}Async{% endif %}ReadWriteArray):
+        {%- elif node.read_only %}
+class {{node.fully_qualified_type_name}}_array_cls(Reg{% if asyncoutput %}Async{% endif %}ReadOnlyArray):
+        {%- elif node.write_only %}
+class {{node.fully_qualified_type_name}}_array_cls(Reg{% if asyncoutput %}Async{% endif %}WriteOnlyArray):
         {%- endif %}
     """
     Class to represent a register array in the register model
@@ -141,9 +142,9 @@ class {{get_fully_qualified_type_name(node)}}_array_cls(Reg{% if asyncoutput %}A
 
     @property
     def _element_datatype(self) -> Type[Node]:
-        return {{get_fully_qualified_type_name(node)}}_cls
+        return {{node.fully_qualified_type_name}}_cls
 
-    {{ universal_properties(node) }}
+    {{ universal_properties(node.instance) }}
 
     {%- endif %}
 
