Simplify calls into get_reg_writable_fields in the test bench

--- a/src/peakrdl_python/templates/addrmap_tb.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_tb.py.jinja
@@ -895,13 +895,13 @@ class {{fq_block_name}}_single_access({{top_node.inst_name}}_TestCase): # type: 
             if not isinstance(rut, Reg{% if asyncoutput %}Async{% endif %}ReadWrite):
                 raise TypeError('Failed to find read/write register')
             {% if asyncoutput %}await {% endif %}write_field_cominbinations(reg=rut,
-                                       writable_fields = [ {% for field in get_reg_writable_fields(node, hide_node_func) -%}
+                                       writable_fields = [ {% for field in get_reg_writable_fields(node) -%}
                                                            '{{ safe_node_name(field) }}' {%- if not loop.last -%},{%- endif %}
                                                            {% endfor -%} ])
             {% else %}
             kwargs = {} # type: ignore[var-annotated]
             expected_value = 0
-            {% for field in get_reg_writable_fields(node, hide_node_func) %}
+            {% for field in get_reg_writable_fields(node) %}
             {%- if 'encode' in field.list_properties() %}
             rand_enum_value = random_enum_reg_value(self.dut.{{'.'.join(get_python_path_segments(field))}}.enum_cls)
             rand_field_value = rand_enum_value.value
