--- a/src/peakrdl_python/templates/addrmap.py.jinja
+++ b/src/peakrdl_python/templates/addrmap.py.jinja
@@ -155,10 +155,10 @@ class {{node.fully_qualified_type_name}}({% if asyncoutput %}Async{% endif %}Reg
     """
     Class to represent a register file in the register model
 
-    {{get_table_block(node) | indent}}
+    {{get_table_block(node.instance) | indent}}
     """
 
-    __slots__ : list[str] = [{%- for child_node in node.children(unroll=False) -%}'__{{child_node.inst_name}}'{% if not loop.last %}, {% endif %}{%- endfor %}]
+    __slots__ : list[str] = [{%- for child_node in node.instance.children(unroll=False) -%}'__{{child_node.inst_name}}'{% if not loop.last %}, {% endif %}{%- endfor %}]
 
     {% if asyncoutput %}AsyncCallbackSet{% else %}NormalCallbackSet{% endif %}
 
@@ -174,16 +174,16 @@ class {{node.fully_qualified_type_name}}({% if asyncoutput %}Async{% endif %}Reg
                          parent=parent)
 
         # instance of objects within the class
-        {% for child_node in node.children(unroll=False) -%}
+        {% for child_node in node.instance.children(unroll=False) -%}
             {{ regfile_or_addr_instance(child_node) | indent }}
         {% endfor %}
 
     @property
     def size(self) -> int:
-        return {{node.size}}
+        return {{node.instance.size}}
 
     # properties for Register and RegisterFiles
-    {%- for child_node in node.children(unroll=False) %}
+    {%- for child_node in node.instance.children(unroll=False) %}
         {%- if not hide_node_func(child_node) %}
             {%- if isinstance(child_node, systemrdlRegNode) or isinstance(child_node, systemrdlRegfileNode) %}
     @property
@@ -205,24 +205,24 @@ class {{node.fully_qualified_type_name}}({% if asyncoutput %}Async{% endif %}Reg
         {%- endif %}
     {% endfor %}
 
-    {{ systemrdl_python_child_name_map(node) }}
+    {{ systemrdl_python_child_name_map(node.instance) }}
 
-    {{ get_child_by_system_rdl_name(node) }}
+    {{ get_child_by_system_rdl_name(node.instance) }}
 
     {{ udp_property(node) }}
 
-    {{ universal_properties(node) }}
+    {{ universal_properties(node.instance) }}
 
-    {{ child_register_getter(node) }}
+    {{ child_register_getter(node.instance) }}
 
         {% if asyncoutput %}
-    {{ child_getter(node, "get_sections", "AsyncRegFile, AsyncRegFileArray", systemrdlRegfileNode) }}
+    {{ child_getter(node.instance, "get_sections", "AsyncRegFile, AsyncRegFileArray", systemrdlRegfileNode) }}
     {% else %}
-    {{ child_getter(node, "get_sections", "RegFile, RegFileArray", systemrdlRegfileNode) }}
+    {{ child_getter(node.instance, "get_sections", "RegFile, RegFileArray", systemrdlRegfileNode) }}
     {% endif %}
 
-     {%- if node.is_array %}
-class {{get_fully_qualified_type_name(node)}}_array({% if asyncoutput %}Async{% endif %}RegFileArray):
+     {%- if node.instance.is_array %}
+class {{node.fully_qualified_type_name}}_array({% if asyncoutput %}Async{% endif %}RegFileArray):
     """
     Class to represent a regfile array in the register model
     """
@@ -240,7 +240,7 @@ class {{get_fully_qualified_type_name(node)}}_array({% if asyncoutput %}Async{% 
 
     @property
     def _element_datatype(self) -> Type[Node]:
-        return {{get_fully_qualified_type_name(node)}}
+        return {{node.fully_qualified_type_name}}
     {%- endif %}
 {%- endmacro %}
 
